Fixed Link in footer, changed CSS for body, and scroll bar visibility

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
   margin-top: 60px;
-  height: 100vh;
+  height: calc(100vh - 120px);
   font-family: 'Exo 2', sans-serif;
 }
