--- a/src/pages/Markdown/Markdown.css
+++ b/src/pages/Markdown/Markdown.css
@@ -6,7 +6,7 @@
 
 .markdowntext {
   width: 45%;
-  height: 85vh;
+  height: 83vh;
   border-radius: 15px;
   background-color: rgba(214, 209, 209, 0.5);
   backdrop-filter: blur(10px);
@@ -24,7 +24,6 @@
 .markdowntext::-webkit-scrollbar-track,
 .markdown::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
   border-radius: 20px;
   margin-top: 5px;
 }
@@ -55,7 +54,7 @@
 .markdown {
   border: solid 1px #2d3e45;
   width: 45%;
-  height: 85vh;
+  height: 83vh;
   border-radius: 15px;
   background-color: #fff;
   padding: 10px;
